[package]
name = "sargas"
version = "0.1.0"
authors = ["Gernot Bauer <bauer@itt.uni-stuttgart.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.14"
rand = "0.8"
rand_distr = "0.4.0"
numpy = "0.13.1"
itertools = "0.10"
chemfiles = "0.10"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[profile.release]
debug = true
