[package]
name = "sargas"
version = "0.1.0"
authors = ["Gernot Bauer <bauer@itt.uni-stuttgart.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4.0"
numpy = { version = "0.13.2", optional = true }
itertools = "0.10"
chemfiles = "0.10"
approx = "*"

[dependencies.pyo3]
version = "0.13.2"
optional = true

[profile.release]
debug = true

[features]
python = ["pyo3/extension-module", "numpy"]
default = ["python"]